// Copyright 2017 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// This proto describes the types that can be used inside Mixer templates. These message types are used to specify
// field datatype to express the equivalent ValueType for the expressions the field can be mapped to.
package istio.mixer.v1.template;

// IPAddress is used inside templates for fields that are of ValueType "IP_ADDRESS"
message IPAddress {}

// DNSName is used inside templates for fields that are of ValueType "DNS_NAME"
message DNSName {}

// EmailAddress is used inside templates for fields that are of ValueType "EMAIL_ADDRESS"
message EmailAddress {}

// Uri is used inside templates for fields that are of ValueType "URI"
message Uri {}

// Duration is used inside templates for fields that are of ValueType "DURATION"
message Duration {}

// TimeStamp is used inside templates for fields that are of ValueType "TIMESTAMP"
message TimeStamp {}
